update project section code

--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
                     </a>
 
                     <a class="btn-floating btn-lg social-icon" style="color: #ffffff" href="#" target="_blank"
-                        data-toggle="tooltip" title="Github">
+                        href="https://github.com/AkashOne7" data-toggle="tooltip" title="Github">
                         <i id="social-gt" class="fab fa-github social" style="height: 70px; width: 30px"></i>
                     </a>
 
@@ -397,18 +397,35 @@
             <div class="resume-section-content">
                 <h2 class="mb-5">Projects</h2>
                 <ul class="d-flex flex-wrap ">
+
                     <li class="d-inline m-1">
                         <div class="card" style="width: 18rem;">
                             <!-- <img class="card-img-top " src="assets\img\validation Form2.png" alt="Card image cap"> -->
                             <div class="card-body">
-                                <h5 class="card-title subheading">Image Gallery Name</h5>
-                                <p class="card-text">Image Gallery using html ,css,Bootstrap ,JavaScript</p>
-                                <a class="btn  btn-outline-card ml-5" href="https://localhost:44356/Home/Form"
+                                <h5 class="card-title subheading">Validation form &nbsp;&nbsp;
+                                    <a href="https://github.com/AkashOne7/formvalidation" target="_blank"
+                                        style="color: black;text-decoration: none;"><i class="fab fa-github"
+                                            aria-hidden="true"></i> </a>
+                                    </a>
+                                </h5>
+                                <ul>
+                                    <li>
+                                        <p class="card-text">Used HTML,css,Jquery</p>
+                                    </li>
+                                    <li>
+                                        <p class="card-text">Successfully able to validate user-entered data before it
+                                            reaches the server.
+                                        </p>
+                                    </li>
+                                </ul>
+                                </p>
+                                <a class="btn  btn-outline-card ml-5" href="https://validationform-one7.netlify.app/"
                                     target="_blank"><i class="fas fa-clone left"></i> View
                                     project</a>
                             </div>
                         </div>
                     </li>
+
                     <li class="d-inline m-1">
                         <div class="card" style="width: 18rem;">
                             <!-- <img class="card-img-top " src="assets\img\validation Form2.png" alt="Card image cap"> -->
@@ -421,22 +438,23 @@
                             </div>
                         </div>
                     </li>
-                    <li class="d-inline m-1">
-                        <div class="card" style="width: 18rem;">
-                            <!-- <img class="card-img-top " src="assets\img\validation Form2.png" alt="Card image cap"> -->
-                            <div class="card-body">
-                                <h5 class="card-title subheading">Validation form</h5>
-                                <p class="card-text">Validation Form Using HTML,Css,Jquery</p>
-                                <a class="btn  btn-outline-card ml-5" href="https://localhost:44356/Home/Form"
-                                    target="_blank"><i class="fas fa-clone left"></i> View
-                                    project</a>
-                            </div>
-                        </div>
-                    </li>
 
-                    <li class="d-inline m-1">
+
+                    <!-- <li class="d-inline m-1">
                         <div class="card" style="width: 18rem;">
-                            <!-- <img class="card-img-top " src="assets\img\validation Form2.png" alt="Card image cap"> -->
+                            <img class="card-img-top " src="assets\img\validation Form2.png" alt="Card image cap"> 
+                            <div class="card-body">
+                                <h5 class="card-title subheading">Image Gallery Name</h5>
+                                <p class="card-text">Image Gallery using html ,css,Bootstrap ,JavaScript</p>
+                                <a class="btn  btn-outline-card ml-5" href="https://localhost:44356/Home/Form"
+                                    target="_blank"><i class="fas fa-clone left"></i> View
+                                    project</a>
+                            </div>
+                        </div>
+                    </li> -->
+
+                    <!-- <li class="d-inline m-1">
+                        <div class="card" style="width: 18rem;">
                             <div class="card-body">
                                 <h5 class="card-title subheading">Validation form</h5>
                                 <p class="card-text">Validation Form Using HTML,Css,Jquery</p>
@@ -445,7 +463,7 @@
                                     project</a>
                             </div>
                         </div>
-                    </li>
+                    </li> -->
                 </ul>
             </div>
             <!-- <div class="d-flex flex-column flex-md-row justify-content-between mb-3">
@@ -624,9 +642,10 @@
                 <ul class="fa-ul mb-0">
                     <li>
                         <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
-                        Problem Solving Skill - <a href="https://www.hackerrank.com/certificates/bd9552c08491" target="_blank" >hackerrank
+                        Problem Solving Skill - <a href="https://www.hackerrank.com/certificates/bd9552c08491"
+                            target="_blank">hackerrank
                             Certification</a>
-                          
+
                     </li>
                     <li>
                         <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
