--- a/index.html
+++ b/index.html
@@ -121,8 +121,8 @@
                         <i id="social-hr" class="fab fa-hackerrank social" style="height: 70px; width: 30px"></i>
                     </a>
 
-                    <a class="btn-floating btn-lg social-icon" style="color: #ffffff" href="#" target="_blank"
-                        href="https://github.com/AkashOne7" data-toggle="tooltip" title="Github">
+                    <a class="btn-floating btn-lg social-icon" style="color: #ffffff" href="https://github.com/AkashOne7" target="_blank"
+                        data-toggle="tooltip" title="Github">
                         <i id="social-gt" class="fab fa-github social" style="height: 70px; width: 30px"></i>
                     </a>
 
