--- a/index.html
+++ b/index.html
@@ -396,7 +396,7 @@
         <section class="resume-section" id="Projects">
             <div class="resume-section-content">
                 <h2 class="mb-5">Projects</h2>
-                <ul class="d-flex flex-wrap ">
+                <ul class="d-flex flex-wrap pl-sm-0 pl-md-3 pl-lg-5 ">
 
                     <li class="d-inline m-1">
                         <div class="card" style="width: 18rem;">
