--- a/index.html
+++ b/index.html
@@ -39,13 +39,13 @@
                     <a class="nav-link js-scroll-trigger" href="#about">About</a>
                 </li>
                 <li class="nav-item">
+                    <a class="nav-link js-scroll-trigger" href="#education">Education</a>
+                </li>
+                <li class="nav-item">
                     <a class="nav-link js-scroll-trigger" href="#skills">Skills</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link js-scroll-trigger" href="#Projects">Projects</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link js-scroll-trigger" href="#education">Education</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link js-scroll-trigger" href="#experience">Experience</a>
@@ -109,11 +109,11 @@
                 </p>
                 <!-- Social icons -->
                 <div class="social-icons">
-                    <a class="btn-floating btn-lg social-icon" style="color: #ffffff" href="#" target="_blank"
+                    <!-- <a class="btn-floating btn-lg social-icon" style="color: #ffffff" href="#" target="_blank"
                         data-toggle="tooltip" title="LinkedIn">
                         <i id="social-Li" class="fab fa-linkedin-in social" style="height: 70px; width: 25px">
                         </i>
-                    </a>
+                    </a> -->
 
                     <a class="btn-floating btn-lg social-icon" style="color: #ffffff"
                         href="https://www.hackerrank.com/ghadagea2018?hr_r=1" target="_blank" data-toggle="tooltip"
@@ -126,9 +126,9 @@
                         <i id="social-gt" class="fab fa-github social" style="height: 70px; width: 30px"></i>
                     </a>
 
-                    <a class="btn-floating btn-lg social-icon" style="color: #ffffff" href="#" target="_blank"
+                    <!-- <a class="btn-floating btn-lg social-icon" style="color: #ffffff" href="#" target="_blank"
                         data-toggle="tooltip" title="Twitter">
-                        <i id="social-tw" class="fab fa-twitter social" style="height: 70px; width: 30px"></i></a>
+                        <i id="social-tw" class="fab fa-twitter social" style="height: 70px; width: 30px"></i></a> -->
 
                     <!-- <a class="btn-floating btn-lg social-icon" style="color:#ffffff" href="#" target="_blank"
                         data-toggle="tooltip" title="Instagram">
@@ -377,7 +377,7 @@
                     </li>
                     <li>
                         <span class="fa-li"><i class="fas fa-check"></i></span>
-                        Development With the help of Repository Design pattern, ASP.NET MVC 5
+                        Development With the help of N-Tier Architechture pattern, ASP.NET MVC 5
                     </li>
                     <li>
                         <span class="fa-li"><i class="fas fa-check"></i></span>
@@ -385,7 +385,7 @@
                     </li>
                     <li>
                         <span class="fa-li"><i class="fas fa-check"></i></span>
-                        Data Access Tools - ADO.NET, Dapper ORM, Entity Framework 6.0 (Database First)
+                        Data Access Tools - ADO.NET, Dapper ORM
                     </li>
                 </ul>
             </div>
@@ -400,7 +400,6 @@
 
                     <li class="d-inline m-1">
                         <div class="card" style="width: 18rem;">
-                            <!-- <img class="card-img-top " src="assets\img\validation Form2.png" alt="Card image cap"> -->
                             <div class="card-body">
                                 <h5 class="card-title subheading">Validation form &nbsp;&nbsp;
                                     <a href="https://github.com/AkashOne7/formvalidation" target="_blank"
@@ -427,14 +426,27 @@
                     </li>
 
                     <li class="d-inline m-1">
-                        <div class="card" style="width: 18rem;">
-                            <!-- <img class="card-img-top " src="assets\img\validation Form2.png" alt="Card image cap"> -->
-                            <div class="card-body">
-                                <h5 class="card-title subheading">Project Name</h5>
-                                <p class="card-text">Lorem iit amet consectetureiciendis!</p>
-                                <a class="btn  btn-outline-card ml-5" href="https://localhost:44356/Home/Form"
+                        <div class="card" style="width: 19rem;">
+                            <div class="card-body p-1">
+                                <h5 class="card-title subheading">Grievance Rederessal portal &nbsp;&nbsp;
+                                    <a href="https://github.com/AkashOne7/formvalidation" target="_blank"
+                                        style="color: black;text-decoration: none;"><i class="fab fa-github"
+                                            aria-hidden="true"></i> </a>
+                                    </a>
+                                </h5>
+                                <ul>
+                                    <li>
+                                        <p class="card-text">It helps in managing and resolving the student's complaints efficiently</p>
+                                    </li>
+                                    <li>
+                                        <p class="card-text">Tech Stack: C#, Visual Studio 2019, ASP.NET MVC5, Bootstrap, JQuery, AJAX, SQL Server 2008, Dapper, Automapper
+                                        </p>
+                                    </li>
+                                </ul>
+                                </p>
+                                <!-- <a class="btn  btn-outline-card ml-5" href="https://validationform-one7.netlify.app/"
                                     target="_blank"><i class="fas fa-clone left"></i> View
-                                    project</a>
+                                    project</a> -->
                             </div>
                         </div>
                     </li>
